// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkCheckbox should render correctly 1`] = `
<label
  className="bpk-checkbox"
>
  <input
    className="bpk-checkbox__input"
    disabled={false}
    name="checkbox"
    type="checkbox"
  />
  <svg
    className="bpk-checkbox__icon"
    height="18"
    style={
      Object {
        "height": ".75rem",
        "width": ".75rem",
      }
    }
    viewBox="0 0 24 24"
    width="18"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
    />
  </svg>
  <span
    className="bpk-checkbox__label"
  >
    Prefer directs
  </span>
</label>
`;

exports[`BpkCheckbox should render correctly with a small label 1`] = `
<label
  className="bpk-checkbox"
>
  <input
    className="bpk-checkbox__input"
    disabled={false}
    name="checkbox"
    type="checkbox"
  />
  <svg
    className="bpk-checkbox__icon"
    height="18"
    style={
      Object {
        "height": ".75rem",
        "width": ".75rem",
      }
    }
    viewBox="0 0 24 24"
    width="18"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
    />
  </svg>
  <span
    className="bpk-checkbox__label bpk-checkbox__label--small"
  >
    Prefer directs
  </span>
</label>
`;

exports[`BpkCheckbox should render correctly with checked attribute 1`] = `
<label
  className="bpk-checkbox"
>
  <input
    checked={true}
    className="bpk-checkbox__input"
    disabled={false}
    name="checkbox"
    type="checkbox"
  />
  <svg
    className="bpk-checkbox__icon"
    height="18"
    style={
      Object {
        "height": ".75rem",
        "width": ".75rem",
      }
    }
    viewBox="0 0 24 24"
    width="18"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
    />
  </svg>
  <span
    className="bpk-checkbox__label"
  >
    Prefer directs
  </span>
</label>
`;

exports[`BpkCheckbox should render correctly with disabled attribute 1`] = `
<label
  className="bpk-checkbox bpk-checkbox--disabled"
>
  <input
    className="bpk-checkbox__input"
    disabled={true}
    name="checkbox"
    type="checkbox"
  />
  <svg
    className="bpk-checkbox__icon"
    height="18"
    style={
      Object {
        "height": ".75rem",
        "width": ".75rem",
      }
    }
    viewBox="0 0 24 24"
    width="18"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
    />
  </svg>
  <span
    className="bpk-checkbox__label"
  >
    Prefer directs
  </span>
</label>
`;

exports[`BpkCheckbox should render correctly with id attribute 1`] = `
<label
  className="bpk-checkbox"
>
  <input
    className="bpk-checkbox__input"
    disabled={false}
    id="checkbox"
    name="checkbox"
    type="checkbox"
  />
  <svg
    className="bpk-checkbox__icon"
    height="18"
    style={
      Object {
        "height": ".75rem",
        "width": ".75rem",
      }
    }
    viewBox="0 0 24 24"
    width="18"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
    />
  </svg>
  <span
    className="bpk-checkbox__label"
  >
    Prefer directs
  </span>
</label>
`;

exports[`BpkCheckbox should render correctly with required attribute 1`] = `
<label
  className="bpk-checkbox"
>
  <input
    className="bpk-checkbox__input"
    disabled={false}
    name="checkbox"
    type="checkbox"
  />
  <svg
    className="bpk-checkbox__icon"
    height="18"
    style={
      Object {
        "height": ".75rem",
        "width": ".75rem",
      }
    }
    viewBox="0 0 24 24"
    width="18"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
    />
  </svg>
  <span
    className="bpk-checkbox__label"
  >
    Prefer directs
    <span
      className="bpk-checkbox__asterisk"
    >
      *
    </span>
  </span>
</label>
`;

exports[`BpkCheckbox should render correctly with value attribute 1`] = `
<label
  className="bpk-checkbox"
>
  <input
    className="bpk-checkbox__input"
    disabled={false}
    name="checkbox"
    type="checkbox"
    value="my-value"
  />
  <svg
    className="bpk-checkbox__icon"
    height="18"
    style={
      Object {
        "height": ".75rem",
        "width": ".75rem",
      }
    }
    viewBox="0 0 24 24"
    width="18"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
    />
  </svg>
  <span
    className="bpk-checkbox__label"
  >
    Prefer directs
  </span>
</label>
`;

exports[`BpkCheckbox should render correctly with white attribute 1`] = `
<label
  className="bpk-checkbox bpk-checkbox--white"
>
  <input
    className="bpk-checkbox__input"
    disabled={false}
    name="checkbox"
    type="checkbox"
  />
  <svg
    className="bpk-checkbox__icon"
    height="18"
    style={
      Object {
        "height": ".75rem",
        "width": ".75rem",
      }
    }
    viewBox="0 0 24 24"
    width="18"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
    />
  </svg>
  <span
    className="bpk-checkbox__label"
  >
    Prefer directs
  </span>
</label>
`;
